...
) {
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("IndomieList")
    ) {
        items(orderIndomie) { data ->
            IndomieItem(
                image = data.indomie.image,
                title = data.indomie.title,
                price = data.indomie.price,
...
